--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,4 +29,4 @@ sonarqube:
   stage: sonarqube
   script:
     - cd C:\Users\dirkv\Documents\school\semester3\WebshopProject\Project\webshop-s3\webshop-service
-    - ./gradlew sonarqube
+    - .\gradlew sonarqube
