--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,4 +30,4 @@ sonarqube:
   script:
     - cd C:\Users\dirkv\Documents\school\semester3\WebshopProject\Project\webshop-s3\webshop-service
     - ls
-    - .\gradlew build
+    - .\gradlew sonarqube
