Added retailer repository and service + tests

--- a/webshop-service/build.gradle
+++ b/webshop-service/build.gradle
@@ -50,4 +50,14 @@ dependencies {
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
 
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    implementation 'org.mockito:mockito-core:3.6.0'
+
+}
+
+test{
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
