--- a/webshop-client/package.json
+++ b/webshop-client/package.json
@@ -14,6 +14,7 @@
     "prismic-javascript": "^3.0.2",
     "prismic-vue": "^2.0.1",
     "vue": "^2.6.11",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.4.6",
     "vuetify": "^2.3.14"
   },
