--- a/webshop-client/package.json
+++ b/webshop-client/package.json
@@ -15,6 +15,7 @@
     "prismic-vue": "^2.0.1",
     "vue": "^2.6.11",
     "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.4.6",
     "vuetify": "^2.3.14"
   },
