--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,8 +17,7 @@ build site frontend:
 
 unit test backend:
   stage: test_backend
-  script:
-    -$ ./gradlew check
+  script: ./gradlew check
 
 sonarqube:
   stage: sonarqube
