--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,5 @@ build site frontend:
 sonarqube:
   stage: sonarqube
   script:
-    - cd webshop-serice
-    - ls
+    - cd webshop-service
     - .\gradlew sonarqube
