--- a/webshop-service/build.gradle
+++ b/webshop-service/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
     id 'war'
-    id "org.sonarqube" version "2.7"
+    id 'org.sonarqube' version '2.7'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 group 'org.example'
@@ -9,6 +10,13 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+shadowJar {
+    mergeServiceFiles()
+    manifest {
+        attributes 'Main-Class': 'webshop.service.Publisher'
+    }
 }
 
 dependencies {
@@ -58,7 +66,7 @@ dependencies {
 
 }
 
-test{
+test {
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
