--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,6 @@ image: node:10.6.0
 stages:
   - build_backend
   - test_backend
-  - shadow_jar
   - docker_backend
   - sonarqube
   - build_frontend
@@ -21,16 +20,12 @@ unit test backend:
     - cd webshop-service
     - ./gradlew check
 
-create shadowJar:
-  stage: shadow_jar
-  script:
-    - cd webshop-service
-    - ./gradlew shadowJar
-
 build backend image:
   stage: docker_backend
   script:
-    - cd webshop-service\build\libs
+    - cd webshop-service
+    - ./gradlew shadowJar
+    - cd build\libs
     - docker build -t dockerjerseyimage .
 
 build frontend:
