--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ unit test backend:
 build backend image:
   stage: docker_backend
   script:
+    - docker rmi dockerjerseyimage
     - cd webshop-service
     - ./gradlew shadowJar
     - cd build\libs
@@ -45,5 +46,6 @@ build frontend:
 build frontend image:
   stage: docker_frontend
   script:
+    - docker rmi dockervueimage
     - cd webshop-client
     - docker build -t dockervueimage .
