--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ stages:
   - sonarqube
   - build_frontend
   - docker_frontend
+  - run_images
+  - test_frontend
 
 build backend:
   stage: build_backend
@@ -49,3 +51,16 @@ build frontend image:
     - docker rmi dockervueimage
     - cd webshop-client
     - docker build -t dockervueimage .
+
+run docker images:
+  stage: run_images
+  script:
+    -docker run -it -p 2121:80 --rm  --name dockervueimage dockervueimage
+    -docker run -itd -p 4545:4545 --rm --name dockerjerseyimage dockerjerseyimage
+
+cypress test frontend:
+  stage: test_frontend
+  script:
+    - npm install
+    - npm run cypress:verify
+    - npm run cypress:run
