--- a/webshop-client/package.json
+++ b/webshop-client/package.json
@@ -51,5 +51,10 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "cypress:run": "cypress run",
+    "cypress:verify": "cypress verify"
+  },
 }
