--- a/webshop-client/package.json
+++ b/webshop-client/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "cypress:run": "cypress run",
+    "cypress:verify": "cypress verify"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -51,10 +53,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "cypress:run": "cypress run",
-    "cypress:verify": "cypress verify"
-  }
+  ]
 }
