--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,7 @@ build frontend image:
 run docker images:
   stage: run_images
   script:
-    - docker run -it -p 2121:80 --rm  --name dockervueimage dockervueimage
+    - docker run -i -p 2121:80 --rm  --name dockervueimage dockervueimage
     - docker run -itd -p 4545:4545 --rm --name dockerjerseyimage dockerjerseyimage
 
 cypress test frontend:
