--- a/webshop-client/nginx.conf
+++ b/webshop-client/nginx.conf
@@ -17,7 +17,7 @@ http {
   server {
     listen       80;
     server_name  localhost;
-    location /app-a {
+    location / {
 		  root   /app;
 		  index  index.html;
 		  try_files $uri $uri/ /app-a/index.html;
