--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,8 @@ build frontend image:
 run docker images:
   stage: run_images
   only:
-    - origin master
+    refs:
+      - master
   script:
     - docker run -itd -p 4545:4545 --rm --name dockerjerseyimage dockerjerseyimage
     - docker run -d -p 2121:80 --rm  --name dockervueimage dockervueimage
